--- a/forum-config/src/main/resources/bootstrap.yml
+++ b/forum-config/src/main/resources/bootstrap.yml
@@ -17,4 +17,4 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8001/eureka/
   instance:
-    instance-id: ${spring.application.name}:${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.application.name}:${server.port}
