--- a/forum-provider/forum-provider-admin/pom.xml
+++ b/forum-provider/forum-provider-admin/pom.xml
@@ -2,29 +2,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.fwf_bbs</groupId>
-    <artifactId>forum-provider-topic-api</artifactId>
+    <artifactId>forum-provider-admin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>forum-provider-topic-api</name>
-    <description>forum-provider-topic-api</description>
+    <name>forum-provider-admin</name>
+    <description>forum-provider-admin</description>
     <properties>
         <java.version>17</java.version>
     </properties>
-
-    <packaging>jar</packaging>
     <parent>
-        <artifactId>forum-provider-api</artifactId>
+        <artifactId>forum-provider</artifactId>
         <groupId>com.fwf_bbs</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.fwf_bbs</groupId>
+            <artifactId>forum-provider-admin-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
