test:add demo example

--- a/forum-gateway/pom.xml
+++ b/forum-gateway/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
             <version>2.2.10.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.fwf_bbs</groupId>
+            <artifactId>forum-shiro</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
 <!--        &lt;!&ndash; swagger2聚合网关 &ndash;&gt;-->
 <!--        <dependency>-->
